tests/fixtures/invalid/parenthesized_pointer_aggregate_field.c
struct Matrix {
    int (*row)[3];
};
int main(void) {
    return 0;
}
